# project-board

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: AGENTS.md  ai.py  auth.py  database.py  main.py  models.py  pyproject.toml
backend/routers/: auth.py  board.py  chat.py
backend/tests/: conftest.py  test_auth.py  test_board.py  test_chat.py
docs/: DATABASE.md  PLAN.md  code_review.md  schema.json
frontend/: AGENTS.md
frontend/src/app/: page.tsx
frontend/src/components/: AuthProvider.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx
frontend/src/lib/: api.ts  kanban.test.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.sh  stop.bat  stop.sh
